# bacon-experiments

./: .gitignore  README.md
HID/: CMakeLists.txt  HID-sway.conf  LockScreen.qml  Main.qml  build-app.sh  buttons.toml  enable-hid.sh  hid@.service  launcher.h  main.cpp  payload-ui.service  runner.h  setup-hkdm.sh  toggle-screen.sh  toggle-tty.sh
iBacon/: ControlCenter.qml  LockScreen.qml  SpringBoard.qml  cc.sh  install.sh  keyboard.sh  launcher.h  main.cpp  power.sh  requirements.txt  springboard-sway.conf  springboard.service  springboard@.service  status.sh  swipe.sh  waybar.css  waybar.json
iBacon/brain/: CMakeLists.txt  main.cpp
